@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmContentEntry.h,v $
   Language:  C++
-  Date:      $Date: 2005/01/25 15:21:20 $
-  Version:   $Revision: 1.1 $
+  Date:      $Date: 2005/01/25 16:32:45 $
+  Version:   $Revision: 1.2 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -43,23 +43,19 @@ public:
    /// Sets the value (string) of the current Dicom entry
    virtual void SetValue(std::string const &val) { Value = val; };
  
-   void SetValueOnly(std::string const &val) { Value = val; };
-
    /// \brief Returns the 'Value' (e.g. "Dupond Marcel") converted 
    /// into a 'string', event if it's physically stored on disk as an integer
    std::string const &GetValue() const { return Value; };
 
 protected:
-
    // Contructors are protected, not to be invoked by end user.
    ContentEntry(DictEntry *e);
    ContentEntry(DocEntry *d); 
    // Destructor is protected, not to be invoked by end user.
    ~ContentEntry();
-   
+
 private:
 // Members :
-  
    /// \brief Dicom entry value, internaly represented as a std::string.
    ///        The Value Representation (\ref VR) is independently used
    ///        in order to interpret (decode) this field.
